# epiphany-game

./: .cdtproject  .cvsignore  .gitignore  .project  AUTHORS  BUGS  ChangeLog  Doxyfile  Epiphany.kdevelop  Epiphany.kdevses  INSTALL  Makefile.am  Makefile.cross.win32  Makefile.cross.win64  Makefile.in  Makefile.win  README  TODO  Tech  aclocal.m4  autogen.sh  build-appimage.sh  build-debug.sh  build-srcpkg.sh  build-win32.sh  build-win64.sh  build.sh  config.h.in  configure  configure.in  epiphany-0.6.0.kdevprj  epiphany-0.6.0.kdevses  index.html  new 2.txt  params.json  reconf.sh
aclocal/: expanddir.m4
appdir-src/: epiphany.desktop
data/: Makefile.am  Makefile.in  epiphany.scr  sprites.scr
data/gfx/: Makefile.am  Makefile.in  bottom.tga  boulder.tga  brick.tga  door.pcx  door_blue.pcx  door_green.pcx  door_red.pcx  door_yellow.pcx  emerald.tga  exit.tga  explosion.tga  flintstone.tga  game_font.tga  grass.tga  key.tga  key_blue.pcx  key_green.pcx  key_red.pcx  key_yellow.pcx  menu_background.tga  menu_font.tga  menu_selector.pcx  peperon.tga  player.tga  sapphire.tga  steel.tga  time_font.tga  tomato.tga  top.tga  unknown.tga  wood.tga
data/maps/: Makefile.am  Makefile.in  level0.map  level1.map  level12.map  level14.map  level16.map  level18.map  level19.map  level2.map  level20.map  level21.map  level3.map  level4.map  level5.map  level6.map  level7.map  level8.map  level9.map
data/sfx/: Makefile.am  Makefile.in
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  abstract_configuration.h  cmdline.cpp  cmdline.h  commandline_configuration.cpp  commandline_configuration.h  converter.cpp  dephine.h  direction.h  emdlparser.cpp  emdlparser.h  entity.cpp  entity.h  entity_all.h  entity_factory.cpp  entity_factory.h  entity_manager.cpp  entity_manager.h  entity_type.h  epiconfig.cpp  epiconfig.h  epimap.cpp  epimap.h  except.h  font.h  font_manager.h  game.cpp  game.h  game_timer.cpp  game_timer.h  input.cpp  input.h  iscreen.h  level.cpp  level.h  levelmap.cpp  levelmap.h  (+47 more)
src/entities/: Makefile  Makefile.in  entity_boulder.cpp  entity_boulder.h  entity_brick.cpp  entity_brick.h  entity_door.cpp  entity_door.h  entity_emerald.cpp  entity_emerald.h  entity_exit.cpp  entity_exit.h  entity_explosion.cpp  entity_explosion.h  entity_falling.cpp  entity_falling.h  entity_flint.cpp  entity_flintstone.cpp  entity_flintstone.h  entity_gem.cpp  entity_gem.h  entity_grass.cpp  entity_grass.h  entity_key.cpp  entity_key.h  entity_monster.cpp  entity_monster.h  entity_peperon.cpp  entity_peperon.h  entity_player.cpp  entity_player.h  entity_sapphire.cpp  entity_sapphire.h  entity_steel.cpp  entity_steel.h  entity_tomato.cpp  entity_tomato.h  entity_unknown.h  entity_wood.cpp  entity_wood.h
src/fonts/: SFont.c  SFont.h  font.cpp  font.h  font_factory.cpp  font_factory.h  font_manager.cpp  font_manager.h
