AC_INIT()
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(epiphany,0.6.0)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_HEADER(Hermes/Hermes.h,, [echo "Please install Hermes from http://hermes.clanlib.org";exit])
#AC_CHECK_HEADER(ClanLib/core.h,, [echo "Please get ClanLib from http://www.clanlib.org"; exit])
AC_CHECK_HEADER(SDL/SDL.h,, [echo "Please install SDL from http://www.libsdl.org";exit])
AC_CHECK_LIB(Hermes,   main,,)

AC_CHECK_LIB( clanCore,   main,, [
        echo "ClanLib installed, but -lclanCore not found, run 'ldconfig' and try again,"
        echo "if that doesn't help have a look at the file config.log and look into"
        echo "the FAQ."
        exit
        ])

dnl FIXME: This should fail, if the libs are not detected
AC_CHECK_LIB( clanApp,   main)
AC_CHECK_LIB( clanDisplay,   main)
AC_CHECK_LIB( clanSound,   main)


AC_CHECK_LIB( SDL,   main,, [
        echo "SDL installed, but -lSDLe not found, run 'ldconfig' and try again,"
        echo "if that doesn't help have a look at the file config.log and look into"
        echo "the FAQ."
        exit
        ])


AH_TEMPLATE(RESOURCE_PATH)
AH_TEMPLATE(DEBUG_MODE)
[CXXFLAGS=""]

EPIPHANY_EXPAND_DIR(data_dir, "$datadir/$PACKAGE") 
AC_DEFINE_UNQUOTED(RESOURCE_PATH, "$data_dir")

AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],[Enable debug mode]), [
	AC_DEFINE(DEBUG_MODE,1)
	CXXFLAGS="$CXXFLAGS -O0 -g"
	],
    [
    CXXFLAGS="$CXXFLAGS -O2"
    ]
	)

AC_ARG_ENABLE(profile, AC_HELP_STRING([--enable-profile],[Enable profile mode (very slow!)]), [
	CXXFLAGS="$CXXFLAGS -pg"
	],)

AC_ARG_ENABLE(static, AC_HELP_STRING([--enable-static],[Enable static compiling]), [
	LDFLAGS="$LDFLAGS --static"
	LIBS="$LIBS -L/usr/X11R6/lib -lXext -lXxf86vm -lX11 -lXm -lz -lHermes -ldl -lpthread"
	],)
	
AC_OUTPUT(	Makefile		\
		src/Makefile		\
		data/Makefile		\
		src/entities/Makefile	\
		data/gfx/Makefile	\
		data/sfx/Makefile	\
		data/maps/Makefile
		)
echo ""
echo " LDFLAGS = $LDFLAGS"
echo " CXXFLAGS = $CXXFLAGS"
echo ""
echo "Epiphany configuration is done. Start 'make' now."
echo ""


