pkgdatadir = $(datadir)/@PACKAGE@/gfx
EXTRA_DIST = bottom.tga exit.tga key.tga player.tga top.tga	\
	boulder.tga  explosion.tga   menu_background.tga  	\
	sapphire.tga   unknown.tga brick.tga    flintstone.tga  \
	menu_font.tga        steel.tga      wood.tga door.pcx   \
	game_font.tga   menu_selector.pcx    time_font.tga	\
	emerald.tga  grass.tga  peperon.tga  tomato.tga \
	door_red.pcx door_blue.pcx door_green.pcx door_yellow.pcx
pkgdata_DATA = $(EXTRA_DIST)
