pkgdatadir = $(datadir)/@PACKAGE@/gfx
EXTRA_DIST = exit.bmp player.bmp	\
	boulder.bmp  explosion.bmp   menu_background.bmp  	\
	sapphire.bmp   unknown.bmp brick.bmp    flintstone.bmp  \
	menu_font.bmp        steel.bmp      wood.bmp   \
	game_font.bmp   menu_selector.bmp    time_font.bmp	\
	emerald.bmp  grass.bmp  peperon.bmp  tomato.bmp \
	door_red.bmp door_blue.bmp door_green.bmp door_yellow.bmp
pkgdata_DATA = $(EXTRA_DIST)
