pkgdatadir = $(datadir)/@PACKAGE@/gfx
EXTRA_DIST =boulder.bmp       door_green.bmp  \
	epifont.bmp     game_font.bmp       key_green.bmp        key_yellow.bmp  \
	      menu_selector.bmp  steel.bmp      wood.bmp \
	      brick.bmp         door_red.bmp     exit.bmp        grass.bmp   \
	      key_green_thumb.bmp  key_yellow_thumb.bmp  peperon.bmp   \
	      time_font.bmp credits_font.bmp  door_yellow.bmp  explosion.bmp \
	      key_blue.bmp        key_red.bmp          menu_background.bmp   player.bmp    \
	      tomato.bmp door_blue.bmp     emerald.bmp      flintstone.bmp \
	       key_blue_thumb.bmp  key_red_thumb.bmp    menu_font.bmp  \
	       sapphire.bmp       unknown.bmp menu_back_tile.bmp \
	      menu_title.bmp
	
pkgdata_DATA = $(EXTRA_DIST)
