pkgdatadir = $(datadir)/@PACKAGE@/maps
EXTRA_DIST = level0.map   level11.map  level13.map  level15.map  \
level17.map  level19.map  level20.map  level22.map  level3.map  \
level5.map  level7.map  level9.map level10.map  level12.map  level14.map\
  level16.map  level18.map  level1.map   level21.map  level2.map  \
   level4.map  level6.map  level8.map
pkgdata_DATA = $(EXTRA_DIST)
