pkgdatadir = $(datadir)/@PACKAGE@/sfx
EXTRA_DIST = boulder_fall.wav gameover.wav monster_move.wav wood_smash.wav \
		door_pass.wav gem_fall.wav player_move.wav \
		emerald_eat.wav grass_eat.wav sapphire_eat.wav \
		explosion.wav key_eat.wav timealarm.wav \
		epiphany_credits.ogg epiphany_game.ogg \
		epiphany_menu.ogg epiphany_ready.ogg
pkgdata_DATA = $(EXTRA_DIST)
